@@ -3,21 +3,12 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.ERP5Type.Document.RamCache</string>
-          <string>RamCache</string>
-        </tuple>
-        <none/>
+        <global name="RamCache" module="Products.ERP5Type.Document.RamCache"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
       <dictionary>
-        <item>
-            <key> <string>__ac_local_roles__</string> </key>
-            <value>
-              <none/>
-            </value>
-        </item>
         <item>
             <key> <string>_count</string> </key>
             <value>
@@ -38,7 +29,7 @@
         </item>
         <item>
             <key> <string>cache_expire_check_interval</string> </key>
-            <value> <int>36000</int> </value>
+            <value> <int>1800</int> </value>
         </item>
         <item>
             <key> <string>id</string> </key>
@@ -55,12 +46,6 @@
         <item>
             <key> <string>title</string> </key>
             <value> <string>RAM Cache</string> </value>
-        </item>
-        <item>
-            <key> <string>uid</string> </key>
-            <value>
-              <none/>
-            </value>
         </item>
       </dictionary>
     </pickle>
